--- a/extension/package.json
+++ b/extension/package.json
@@ -21,6 +21,14 @@
         "title": "Git AutoPush: Toggle Auto Push"
       },
       {
+        "command": "git-autopush.setApiKey",
+        "title": "Git AutoPush: Set AI API Key (machine-local)"
+      },
+      {
+        "command": "git-autopush.generateMessage",
+        "title": "Git AutoPush: Generate Commit Message (AI)"
+      },
+      {
         "command": "git-autopush.runOnce",
         "title": "Git AutoPush: Run Once Now"
       },
@@ -70,6 +78,33 @@
           "default": [".env", "*.key", "credentials.json", "*.pem"],
           "description": "File globs that must never be auto-committed."
         }
+        "gitAutopush.ai.enabled": {
+          "type": "boolean",
+          "default": false,
+          "description": "Enable AI-generated commit messages (opt-in)."
+        },
+        "gitAutopush.ai.provider": {
+          "type": "string",
+          "default": "openai",
+          "enum": ["openai", "none"],
+          "description": "AI provider to use for generating commit messages."
+        },
+        "gitAutopush.ai.apiKey": {
+          "type": "string",
+          "default": "",
+          "description": "API key for the selected AI provider. This key is stored machine-locally and not logged or synced.",
+          "scope": "machine"
+        },
+        "gitAutopush.ai.generateCommitMessage": {
+          "type": "boolean",
+          "default": false,
+          "description": "When true, attempt to generate commit messages via AI (requires opt-in and API key)."
+        },
+        "gitAutopush.ai.reviewBeforeCommit": {
+          "type": "boolean",
+          "default": true,
+          "description": "When true, present the AI-generated commit message for user review/edit before committing."
+        },
       }
     }
   },
