--- a/extension/package.json
+++ b/extension/package.json
@@ -97,9 +97,9 @@
         },
         "gitAutopush.ai.provider": {
           "type": "string",
-          "default": "openai",
-          "enum": ["openai", "deepseek", "none"],
-          "description": "AI provider to use for generating commit messages."
+          "default": "deepseek",
+          "enum": ["deepseek"],
+          "description": "AI provider to use for generating commit messages. Currently only DeepSeek is supported."
         },
         "gitAutopush.ai.apiKey": {
           "type": "string",
